testsuite/tests/interpreter_errors/binop_type_error/test.out
main.adb
script:1:1: error: Expected Int but got Str
1 | 15 + "Hello"
  | ^^^^^^^^^^^^ 

